app.yaml
apiVersion: v1
kind: Deployment
metadata:
  name: sample
spec:
  replicas: 2
  matchLabels:
    app: cats
  template:
    metadata:
      labels:
        app: cats
    spec:
      containers:
        - name: app
          image: mikesir87/cats:1.0
