service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample
spec:
  selector:
    app: cats
  ports:
    - port: 5000
