ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cats
spec:
  rules:
    - host: cats.local.mikesir87.training
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sample
                port:
                  number: 5000
